[gd_scene load_steps=14 format=3 uid="uid://dijlwlggctv7x"]

[ext_resource type="PackedScene" uid="uid://pbwf8hqu78wh" path="res://addons/godolibur/UI/Elements/Buttons/CustomButton.tscn" id="1"]
[ext_resource type="Script" path="res://addons/godolibur/UI/DialogBox/DialogBox.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bn5g1nrt2p8vu" path="res://addons/godolibur/UI/Elements/Window/WindowBox.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dqfgodif7jlmn" path="res://addons/godolibur/Assets/arrow.png" id="6"]

[sub_resource type="LabelSettings" id="LabelSettings_a5bm3"]

[sub_resource type="LabelSettings" id="LabelSettings_fcyhl"]

[sub_resource type="Animation" id="3"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VerticalSpace/CharacterDialog/Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(905.411, 221), Vector2(905.411, 226)]
}

[sub_resource type="Animation" id="4"]
resource_name = "ArrowAnimationSmall"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VerticalSpace/CharacterDialog/Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(705, 221), Vector2(705, 226)]
}

[sub_resource type="Animation" id="5"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VerticalSpace:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_end_animation_end"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VerticalSpace:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VerticalSpace:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VerticalSpace/CharacterDialog/Arrow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="6"]
resource_name = "Show options"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VerticalSpace/CharacterDialog/DialogAndButtons/VerticalBox/Option1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VerticalSpace/CharacterDialog/DialogAndButtons/VerticalBox/Option2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_show_options_animation_end"
}]
}

[sub_resource type="Animation" id="7"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VerticalSpace:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VerticalSpace:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VerticalSpace/CharacterDialog/Arrow:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d26sc"]
_data = {
"ArrowAnimationLarge": SubResource("3"),
"ArrowAnimationSmall": SubResource("4"),
"End": SubResource("5"),
"RESET": SubResource("8"),
"Show options": SubResource("6"),
"Start": SubResource("7")
}

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")
typing_speed = 0.05

[node name="VerticalSpace" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -470.0
offset_right = 470.0
size_flags_horizontal = 5
size_flags_vertical = 5
theme_override_constants/separation = 0
alignment = 2

[node name="CharacterName" type="MarginContainer" parent="VerticalSpace"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 0

[node name="NameBox" parent="VerticalSpace/CharacterName" instance=ExtResource("4")]
modulate = Color(1, 1, 1, 0.572549)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextMargin" type="MarginContainer" parent="VerticalSpace/CharacterName"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="CharacterNameText" type="Label" parent="VerticalSpace/CharacterName/TextMargin"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 4
text = "Player Name"
label_settings = SubResource("LabelSettings_a5bm3")
vertical_alignment = 1

[node name="CharacterDialog" type="MarginContainer" parent="VerticalSpace"]
layout_mode = 2

[node name="LargeDialogBox" parent="VerticalSpace/CharacterDialog" instance=ExtResource("4")]
custom_minimum_size = Vector2(940, 244)
layout_mode = 2
size_flags_vertical = 0

[node name="CharacterHead" type="Sprite2D" parent="VerticalSpace/CharacterDialog"]
position = Vector2(102.019, 120.253)
scale = Vector2(0.5, 0.5)

[node name="SmallDialogBox" parent="VerticalSpace/CharacterDialog" instance=ExtResource("4")]
custom_minimum_size = Vector2(550, 244)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Arrow" type="Sprite2D" parent="VerticalSpace/CharacterDialog"]
visible = false
position = Vector2(905.411, 221)
scale = Vector2(0.07, 0.07)
texture = ExtResource("6")

[node name="DialogAndButtons" type="MarginContainer" parent="VerticalSpace/CharacterDialog"]
custom_minimum_size = Vector2(520, 190)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VerticalBox" type="VBoxContainer" parent="VerticalSpace/CharacterDialog/DialogAndButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="DialogText" type="Label" parent="VerticalSpace/CharacterDialog/DialogAndButtons/VerticalBox"]
custom_minimum_size = Vector2(510, 10)
layout_mode = 2
label_settings = SubResource("LabelSettings_fcyhl")
autowrap_mode = 1

[node name="Option1" parent="VerticalSpace/CharacterDialog/DialogAndButtons/VerticalBox" instance=ExtResource("1")]
layout_mode = 2
disabled = true
text = "Option1"

[node name="Option2" parent="VerticalSpace/CharacterDialog/DialogAndButtons/VerticalBox" instance=ExtResource("1")]
layout_mode = 2
disabled = true
text = "Option2"

[node name="MenuAnimation" type="AnimationPlayer" parent="."]
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_d26sc")
}

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.129

[connection signal="timeout" from="LetterTimer" to="." method="_on_LetterTimer_timeout"]
